fixed button spacing in quicknav bar

--- a/src/style/map_quicknav.scss
+++ b/src/style/map_quicknav.scss
@@ -45,13 +45,13 @@ $view-height: 15vh;
 }
 
 .map-arrow-btn {
+  height: $view-height;
+  width: 26vw;
+}
+
+.map-arrow-img {
   height: width;
   width: 26vw;
   max-width: 100px;
   max-height: 100px;
-}
-
-.map-arrow-img {
-  height: 100%;
-  width: 100%;
 }
